--- a/styles.css
+++ b/styles.css
@@ -418,7 +418,7 @@ input:checked+.slider:before {
 .tooltip-word {
     position: relative;
     cursor: help;
-    border-bottom: 1px dashed #8e2de2;
+    border-bottom: 1px dotted #888;
 }
 
 /* Tooltip chính */
